tests/test_files_pa3/new/SemanticErrors/UnaryOpsBad5.ic
class B
{

	boolean booleans(boolean x)
	{
		boolean b;
		string s;

		b = 
			!x;
		s = !b;
		
		return b;
	}
}